# git-renshu

./: CMakeLists.txt  hello.hh  renshu.cc
greetings-include/: good_morning.hh
greetings-src/: CMakeLists.txt
lib-greetins/: CMakeLists.txt
lib-greetins/src/: good_morning.cc  hello.cc
script/: change-version.sh
